# ember

./: .gitignore  Cargo.toml  PHASES.md  README.md
.github/workflows/: ci.yml
scripts/: quantize_check.py  reference_forward.py  reference_logits.py
src/: attention.rs  chat.rs  config.rs  main.rs  model.rs  ops.rs  quant.rs  sample.rs  tensor.rs
